Criação da stack de eventos

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,9 @@
     "paths": {
       "/opt/nodejs/productsLayer": [
         "src/lambda/products/layers/productsLayer/nodejs/ProductRepository"
+      ],
+      "/opt/nodejs/productsEventsLayer": [
+        "src/lambda/products/layers/productsEventsLayer/nodejs/ProductEvent"
       ]
     }
   },
